made the z-index of navbar to 999, avoiding overlapping element problem

--- a/static/styles/navbar.css
+++ b/static/styles/navbar.css
@@ -3,6 +3,7 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 999;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
